--- a/code.html
+++ b/code.html
@@ -14,7 +14,7 @@ body {
 </html>
 <!-- code Ridem --->
   <title>Code Ridem</title>
-  <link rel="stylesheet" href="CSS.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <head>
 <body>
